Add FIND_PROTOBUF and FIND_GRPC option for system library search
Signed-off-by: Andrei Lebedev <lebdron@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             ccache --max-size=1G
       - run:
           name: cmake
-          command: cmake -DCOVERAGE=ON -H$IROHA_HOME -B$IROHA_BUILD
+          command: cmake -DCOVERAGE=ON -DFIND_PROTOBUF=ON -DFIND_GRPC=ON -H$IROHA_HOME -B$IROHA_BUILD
       - run:
           name: make
           command: cmake --build $IROHA_BUILD -- -j2
